--- a/root/backend/.env
+++ b/root/backend/.env
@@ -1,3 +1,4 @@
 NODE_ENV = development
 PORT = 5000
 DATABASE_STRING = mongodb+srv://admin:wubbalubba@cluster0.wuvd6.mongodb.net/auction?retryWrites=true&w=majority
+SECRET = wesuckbad
